Add user balance and /users/me endpoint
